Commit 02: 2 more pages added

--- a/Portfolio/templates/base.html
+++ b/Portfolio/templates/base.html
@@ -61,7 +61,7 @@
                     </a>
 
                     <!-- Web Applications -->
-                    <a href="{% url 'anomaly_ids' %}" class="nav-link flex items-center px-8 py-2 text-xs font-medium transition-all duration-300 hover:bg-neon-green hover:bg-opacity-10">
+                    <a href="{% url 'web_applications' %}" class="nav-link flex items-center px-8 py-2 text-xs font-medium transition-all duration-300 hover:bg-neon-green hover:bg-opacity-10">
                         <i class="fas fa-globe w-5 text-center mr-2"></i>
                         <span class="hidden md:inline">Web Applications</span>
                     </a>
